# zmat

./: .gitmodules  .travis.yml  AUTHORS.txt  ChangeLog.txt  DESCRIPTION  INDEX  LICENSE.txt  Makefile  PKG_ADD  README.rst  zmat.m  zmat.prj
.github/: check-pypi-upload.sh
.github/manylinux2014_wheel_builder/: Dockerfile  build_wheels.sh
.github/workflows/: build_linux_wheel.yml  build_macos_wheel.yml  build_windows_wheel.yml  run_test.yml
docs/: zmat.html
example/: demo_zmat_basic.m  zmat_speedbench.m
example/c/: Makefile  testzmat.c
example/f90/: Makefile
fortran90/: zmatlib.f90
include/: zmat.h  zmatlib.h
octave/darwin-aarch64/: zipmat.mex
octave/darwin-x86_64/: zipmat.mex
octave/gnu-linux-x86_64/: zipmat.mex
octave/linux64/: zipmat.mex
octave/mingw32-x86_64/: zipmat.mex
octave/osx64/: zipmat.mex
octave/win64/: zipmat.mex
octave/x86_64-apple-darwin18.7.0/: zipmat.mex
octave/x86_64-pc-linux-gnu/: zipmat.mex
private/: zipmat.mexa64  zipmat.mexmaca64  zipmat.mexmaci64  zipmat.mexw64
python/: MANIFEST.in  Makefile  README.md  pyproject.toml  pyzmat.c  setup.py
python/tests/: test_zmat.py
python/zmat/: __init__.py
src/: CMakeLists.txt  Makefile  amalgamate.sh  compilemzip.m  compilezmat.m  mexopts_msys2_gcc.xml  mzip.cpp  runcmake.sh  zmat.cpp  zmatlib.c  zmatlib.h
src/blosc2/: CMakeLists.txt  Makefile
src/blosc2/blosc/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/blosc2/internal-complibs/zstd/: Makefile
src/blosc2/internal-complibs/zstd-1.5.2/: Makefile
test/: run_zmat_test.m  test_zmat.m  test_zmat_field.m  test_zmat_roundtrip.m
test/f90/: testzmat.f90
